--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cboden/ratchet"
+    "name": "inghoststv/ratchet"
   , "type": "library"
   , "description": "PHP WebSocket library"
   , "keywords": ["WebSockets", "Server", "Ratchet", "Sockets", "WebSocket"]
@@ -14,11 +14,13 @@
       , {
             "name": "Matt Bonneau"
           , "role": "Developer"
+        }, {
+            "name": "Ilya Babchenko"
+          , "role": "Developer"
         }
     ]
   , "support": {
-        "issues": "https://github.com/ratchetphp/Ratchet/issues"
-      , "chat":    "https://gitter.im/reactphp/reactphp"
+        "issues": "https://github.com/inghoststv/ratchet/issues"
     }
   , "autoload": {
         "psr-4": {
@@ -31,7 +33,7 @@
       , "react/socket": "^1.0 || ^0.8 || ^0.7 || ^0.6 || ^0.5"
       , "react/event-loop": ">=0.4"
       , "guzzlehttp/psr7": "^1.7|^2.0"
-      , "symfony/http-foundation": "^2.6|^3.0|^4.0|^5.0|^6.0"
+      , "symfony/http-foundation": "^2.6|^3.0|^4.0|^5.0|^6.0|^7.0"
       , "symfony/routing": "^2.6|^3.0|^4.0|^5.0|^6.0"
     }
   , "require-dev": {
